# ishmael

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_sdk.py
.beads/: metadata.json
.claude/skills/ish-board/: SKILL.md
.claude/skills/ish-create/: SKILL.md
.claude/skills/ish-dispatch/: SKILL.md
.claude/skills/ish-plan/: SKILL.md
.claude/skills/ish-retry/: SKILL.md
.claude/skills/ish-setup/: SKILL.md
.claude/skills/ish-status/: SKILL.md
.claude/skills/ish:board/: SKILL.md
.claude/skills/ish:create/: SKILL.md
.claude/skills/ish:dispatch/: SKILL.md
.claude/skills/ish:dispatch-workflow/: SKILL.md
.claude/skills/ish:help/: SKILL.md
.claude/skills/ish:plan/: SKILL.md
.claude/skills/ish:retry/: SKILL.md
.claude/skills/ish:setup/: SKILL.md
.claude/skills/ish:status/: SKILL.md
.claude/skills/ish:templates/: SKILL.md
ishmael/: __init__.py  __main__.py  _orchestrator_main.py  agent.py  config.py  mcp_server.py  orchestrator.py  templates.py  tmux.py  tui.py  worker.py  worktree.py
