[project]
name = "ishmael"
version = "0.3.0"
description = "Agent orchestrator using beads (bd) as task database"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.48",
    "mcp>=1.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
ishmael = "ishmael.__main__:main"
ish = "ishmael.__main__:main"
ishmael-mcp = "ishmael.mcp_server:main"
ishmael-worker = "ishmael.worker:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
